vlib/v/checker/tests/println_can_not_print_void_expressions.out
vlib/v/checker/tests/println_can_not_print_void_expressions.vv:4:2: error: `print` can not print void expressions
    2 | 
    3 | fn main() {
    4 |     print(blabla())
      |     ~~~~~~~~~~~~~~~
    5 |     println(blabla())
    6 |     eprint(blabla())
vlib/v/checker/tests/println_can_not_print_void_expressions.vv:5:2: error: `println` can not print void expressions
    3 | fn main() {
    4 |     print(blabla())
    5 |     println(blabla())
      |     ~~~~~~~~~~~~~~~~~
    6 |     eprint(blabla())
    7 |     eprintln(blabla())
vlib/v/checker/tests/println_can_not_print_void_expressions.vv:6:2: error: `eprint` can not print void expressions
    4 |     print(blabla())
    5 |     println(blabla())
    6 |     eprint(blabla())
      |     ~~~~~~~~~~~~~~~~
    7 |     eprintln(blabla())
    8 | }
vlib/v/checker/tests/println_can_not_print_void_expressions.vv:7:2: error: `eprintln` can not print void expressions
    5 |     println(blabla())
    6 |     eprint(blabla())
    7 |     eprintln(blabla())
      |     ~~~~~~~~~~~~~~~~~~
    8 | }
