vlib/v/checker/tests/println_can_not_print_void_expressions.vv
fn blabla() {}
fn main() {
	print(blabla())
	println(blabla())
	eprint(blabla())
	eprintln(blabla())
}
